# botsmann

./: .circuit_breaker_state  .dockerignore  .env  .env.example  .env.local  .eslintcache  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitleaks.toml  .prettierignore  .ralph_session  .ralph_session_history  .response_analysis  @AGENT.md  @fix_plan.md  AGENTS.md  AGENTS.md.new  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  CHANGELOG-botsmann-improvements.md  CLAUDE.md  CLEANUP-SUMMARY.md  CONTRIBUTING.md  DATA_MODELS.md  DEMO_IMPROVEMENTS.md  DEVOPS_AUDIT_REPORT.md  DEVOPS_DEPLOYMENT_GUIDE.md  DEVOPS_IMPLEMENTATION_PLAN.md  DEVOPS_SUMMARY.md  Dockerfile  Dockerfile.dev  ENGINEERING_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  LEX_PROJECT_OVERVIEW.md  MVP_DEFINITION.md  PRODUCTION_READINESS_REPORT.md  PRODUCT_VISION.md  PROJECT_STRUCTURE.md  PROMPT.md  (+53 more)
.claude/: .ralph-loop.local.md  BILLION_DOLLAR_STRATEGY.md  CLAUDE.md  EXPERTISE_REFRESH_PLAN.md  FULL_SITE_AUDIT.md  HONEST_REBUILD_PLAN.md  README.md  SUPABASE_SETUP.md  THREE_TIER_ECOSYSTEM.md
.devcontainer/: Dockerfile  devcontainer.json
.husky/: pre-commit
.vercel/: .env.preview.local  project.json
agents/research-agent/: .env.example  README.md  pyproject.toml
agents/research-agent/examples/: basic_research.py
agents/research-agent/src/: __init__.py  agent.py  providers.py  server.py  tools.py
api/: consultations.js  saveEmail.js  saveEmail.js.save  submit.js
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: BotBuilderForm.tsx  BotPageHeader.tsx  CollaborationForm.tsx  (+20 more)
(+841 files in other folders)
