[project]
name = "nerd-research-agent"
version = "0.1.0"
description = "Multi-provider research agent - backend for Nerd bot"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
anthropic = ["claude-agent-sdk>=0.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
